bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/AssessmentTaskDefinition.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>