bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/Active_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_End_Date__c</fullName>
    <inlineHelpText>Last day the survey can be displayed. Must be on or after the Active Start Date.</inlineHelpText>
    <label>Active End Date</label>
    <type>Date</type>
</CustomField>