bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/Active_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_Start_Date__c</fullName>
    <inlineHelpText>First day the survey becomes visible to frontline users. Must be on or before the Active End Date.</inlineHelpText>
    <label>Active Start Date</label>
    <type>Date</type>
</CustomField>