bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/ActiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>ActiveEndDate__c</fullName>
    <label>Active End Date</label>
    <type>Date</type>
</CustomField>