bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/ActiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>ActiveStartDate__c</fullName>
    <label>Active Start Date</label>
    <type>Date</type>
</CustomField>