bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/Applicable_User_Roles__c.field-meta.xml
<CustomField>
    <fullName>Applicable_User_Roles__c</fullName>
    <description>List of user roles for which this survey is visible; if blank, survey applies to all roles.</description>
    <label>Applicable User Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>Merchandiser</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Key Account Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>