bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/Cust_ID__c.field-meta.xml
<CustomField>
    <fullName>Cust_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Id​</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assessment Task Definitions</relationshipLabel>
    <relationshipName>Assessment_Task_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>