bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Targets a sales Division within the hierarchy. Do not populate customer/store fields when using the sales assignment group.</inlineHelpText>
    <label>Division</label>
    <referenceTo>CustomerToRoute__c</referenceTo>
    <relationshipLabel>Assessment Task Definitions (Division)</relationshipLabel>
    <relationshipName>Assessment_Task_Definitions_Division</relationshipName>
    <type>Lookup</type>
</CustomField>