bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/EUSFA_Execution_Method__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Execution_Method__c</fullName>
    <description>Indicates how the operational task is executed: manually by the BDR or via Image Recognition (IR camera).</description>
    <inlineHelpText>Select the execution method for this task definition: Manual or Image Recognition.</inlineHelpText>
    <label>Execution Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Image Recognition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>