bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/EUSFA_Visit_Pattern__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Visit_Pattern__c</fullName>
    <label>Visit Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V1 (Odd)</fullName>
            </value>
            <value>
                <fullName>V2 (Even)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>