bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Stable upsert key for Workbench and integration loads.</description>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <length>140</length>
    <type>Text</type>
</CustomField>