bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked surveys are eligible for visibility logic. Clear this box to pause a survey without deleting it.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>