bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Key Account (Account Type = Key Account) for Local Survey store matching via Account.KeyAccountId__c. Replaces deprecated Key_AccountBanner__c text matching.</description>
    <inlineHelpText>Select the Key Account record. Store accounts match when Account.KeyAccountId__c equals this lookup.</inlineHelpText>
    <label>Key Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Key Account</value>
        </filterItems>
        <filterItems>
            <field>Account.Market__c</field>
            <operation>equals</operation>
            <valueField>$User.Market__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assessment Task Definitions (Key Account)</relationshipLabel>
    <relationshipName>Assessment_Task_Definitions_Key_Account</relationshipName>
    <type>Lookup</type>
</CustomField>