bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/L1_Channel__c.field-meta.xml
<CustomField>
    <fullName>L1_Channel__c</fullName>
    <inlineHelpText>Use this field when the survey should follow the customer hierarchy. If you populate L1, leave all sales and store assignment fields blank.</inlineHelpText>
    <label>L1 Channel​</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>L1_Channel</valueSetName>
    </valueSet>
</CustomField>