bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/L2_Subchannel__c.field-meta.xml
<CustomField>
    <fullName>L2_Subchannel__c</fullName>
    <inlineHelpText>Targets store sub-channel attributes. Only populate the store assignment group (L2/L3/L4) when sales and customer fields are blank.</inlineHelpText>
    <label>L2 Subchannel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>L2_Subchannel</valueSetName>
    </valueSet>
</CustomField>