bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/L3_Snacks_Val_Segment__c.field-meta.xml
<CustomField>
    <fullName>L3_Snacks_Val_Segment__c</fullName>
    <label>PS L3 Snacks Value Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pricegroup_Cluster_Value_Segmentation</valueSetName>
    </valueSet>
</CustomField>