bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <inlineHelpText>Select the market/country where this survey applies. Only surveys matching the user’s market will be shown.</inlineHelpText>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Markets</valueSetName>
    </valueSet>
</CustomField>