bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/PS_L3_Bevs_Value_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>PS_L3_Bevs_Value_Segmentation__c</fullName>
    <inlineHelpText>Optional store attribute filter used when the survey targets a specific PS L3 segmentation. Leave sales and customer groups empty when using store attributes.</inlineHelpText>
    <label>PS L3 Bevs Value Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pricegroup_Cluster_Value_Segmentation</valueSetName>
    </valueSet>
</CustomField>