bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/PS_L3_Snacks_Value_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>PS_L3_Snacks_Value_Segmentation__c</fullName>
    <description>Store attribute filter for PS L3 Snacks value segmentation. Use store attributes only when sales and customer assignment groups are blank.</description>
    <inlineHelpText>Store attribute filter for PS L3 Snacks value segmentation. Populate L2/L3/L4 only when sales and customer assignment fields are empty.</inlineHelpText>
    <label>PS L3 Snacks Value Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pricegroup_Cluster_Value_Segmentation</valueSetName>
    </valueSet>
</CustomField>