bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/PS_L4_Shopper_Led_Cluster__c.field-meta.xml
<CustomField>
    <fullName>PS_L4_Shopper_Led_Cluster__c</fullName>
    <description>Optional store attribute filter for PS L4 shopper-led clusters. Use store attributes only when sales and customer assignment fields are blank.</description>
    <label>PS L4 Shopper Led Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_L4_Shopper_Led_Cluster</valueSetName>
    </valueSet>
</CustomField>