bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select when the survey should apply to an entire sales Region. Only one assignment group (sales, customer, or store) should be populated.</inlineHelpText>
    <label>Region</label>
    <referenceTo>CustomerToRoute__c</referenceTo>
    <relationshipLabel>Assessment Task Definitions (Region)</relationshipLabel>
    <relationshipName>Assessment_Task_Definitions_Region</relationshipName>
    <type>Lookup</type>
</CustomField>