bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/Sales_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Optional sales hierarchy filter for surveys that should target a specific Sales Unit. Leave customer/store assignment groups empty when this is populated.</inlineHelpText>
    <label>Sales Unit</label>
    <referenceTo>CustomerToRoute__c</referenceTo>
    <relationshipLabel>Assessment Task Definitions (Sales Unit)</relationshipLabel>
    <relationshipName>Assessment_Task_Definitions_Sales_Unit</relationshipName>
    <type>Lookup</type>
</CustomField>