bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/SalesUnit__c.field-meta.xml
<CustomField>
    <fullName>SalesUnit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Unit</label>
    <referenceTo>CustomerToRoute__c</referenceTo>
    <relationshipLabel>Assessment Task Definitions (Sales Unit)</relationshipLabel>
    <relationshipName>Assessment_Task_Definitions1</relationshipName>
    <type>Lookup</type>
</CustomField>