bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/Survey_Title__c.field-meta.xml
<CustomField>
    <fullName>Survey_Title__c</fullName>
    <description>Business-facing title of the survey, shown in the survey configuration and downstream UIs.</description>
    <inlineHelpText>Visible name shown to admins and frontline users; keep it descriptive so duplicate detection and reporting are clear.</inlineHelpText>
    <label>Survey Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>