bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Classifies the Assessment Task Definition (survey) for reporting and duplicate detection.</description>
    <inlineHelpText>Select the survey type (e.g., PS-related Surveys, Local Survey, Main/Secondary Space Audit, SKU Audit).</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PS-related Surveys</fullName>
            </value>
            <value>
                <fullName>Local Survey</fullName>
            </value>
            <value>
                <fullName>Main Space Audit (Beverages)</fullName>
            </value>
            <value>
                <fullName>Main Space Audit (Snacks)</fullName>
            </value>
            <value>
                <fullName>Secondary Space Audit</fullName>
            </value>
            <value>
                <fullName>SKU Audit</fullName>
            </value>
            <value>
                <fullName>Main Space Audit</fullName>
            </value>
            <value>
                <fullName>Census</fullName>
            </value>
            <value>
                <fullName>POSM Audit</fullName>
            </value>
            <value>
                <fullName>Retail Promotion</fullName>
            </value>
            <value>
                <fullName>Total Space Audit</fullName>
            </value>
            <value>
                <fullName>Work With</fullName>
            </value>
            <value>
                <fullName>Image Recognition</fullName>
                <isActive>false</isActive>
                <label>Image Recognition</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>