bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use to target a sales Zone. Leave customer and store assignment fields empty when using the sales hierarchy group.</inlineHelpText>
    <label>Zone</label>
    <referenceTo>CustomerToRoute__c</referenceTo>
    <relationshipLabel>Assessment Task Definitions (Zone)</relationshipLabel>
    <relationshipName>Assessment_Task_Definitions_Zone</relationshipName>
    <type>Lookup</type>
</CustomField>