bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/validationRules/EUSFA_ATD_LocalSurvey_OneCustAttr.validationRule-meta.xml
<ValidationRule>
    <fullName>EUSFA_ATD_LocalSurvey_OneCustAttr</fullName>
    <active>true</active>
    <description>Local Survey: at most one of L1 Channel, L2 Subchannel, or Key Account / Banner may be populated in Assignment Criteria - Customer Hierarchy.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Type__c, &quot;Local Survey&quot;),
  (
    IF(NOT(ISBLANK(TEXT(L1_Channel__c))), 1, 0) +
    IF(NOT(ISBLANK(TEXT(L2_Subchannel__c))), 1, 0) +
    IF(NOT(ISBLANK(Key_Account__c)), 1, 0)
  ) &gt; 1
)</errorConditionFormula>
    <errorDisplayField>L1_Channel__c</errorDisplayField>
    <errorMessage>For Local Survey, populate at most one of L1 Channel, L2 Subchannel, or Key Account / Banner.</errorMessage>
</ValidationRule>