bundled_metadata/force-app/main/default/objects/AssessmentTaskDefinition/validationRules/EUSFA_OrganizedTrade_Type_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>EUSFA_OrganizedTrade_Type_Restriction</fullName>
    <active>true</active>
    <description>Prevents users from selecting any other Type value for Organized Trade records to maintain data integrity and channel-specific survey configuration consistency.</description>
    <errorConditionFormula>AND(
ISPICKVAL(L1_Channel__c, &quot;ORGANIZED TRADE&quot;),
NOT(
OR(
ISPICKVAL(Type__c, &quot;Main Space Audit (Snacks)&quot;),
ISPICKVAL(Type__c, &quot;Main Space Audit (Beverages)&quot;),
ISPICKVAL(Type__c, &quot;Secondary Space Audit&quot;)
)
)
)</errorConditionFormula>
    <errorMessage>For Organized Trade channel, Type must be:
Main Space Audit (Snacks),
Main Space Audit (Beverages), or
Secondary Space Audit.</errorMessage>
</ValidationRule>